Fixed missing background color on .md class

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ div.titlebox span.number:before {
 .side .md p > em {
 font-family: Helvetica,Arial,"Lucida Grande",sans-serif;
 font-weight: 300;
-
+background-color: #990000;
 color: #f2f2f2;
 display: inline-block;
 font-size: 1.4em;
